PROD_10-24-19/force-app/main/default/objects/BLP_History__c/BLP_History__c.object-meta.xml
<CustomObject>
    <description>This will be associated with an Account and will reflect information from past relationships.</description>
    <label>BLP History</label>
    <nameField>
        <displayFormat>BLPH-{0000}</displayFormat>
        <label>BLP History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BLP History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>