PROD_10-24-19/force-app/main/default/objects/BLP_History__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>The Account (customer) associated with this history record</description>
    <inlineHelpText>The Account (customer) associated with this history record</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>BLP History</relationshipLabel>
    <relationshipName>BLP_History</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>