PROD_10-24-19/force-app/main/default/objects/BLP_History__c/fields/Lease_Name__c.field-meta.xml
<CustomField>
    <fullName>Lease_Name__c</fullName>
    <description>The Lease Name from the Yardi record</description>
    <inlineHelpText>The Lease Name from the Yardi record</inlineHelpText>
    <label>Lease Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>