PROD_10-24-19/force-app/main/default/objects/BLP_History__c/fields/Leased_Area__c.field-meta.xml
<CustomField>
    <fullName>Leased_Area__c</fullName>
    <description>Area (in building&#39;s unit of measure) leased by the customer</description>
    <inlineHelpText>Area (in building&#39;s unit of measure) leased by the customer</inlineHelpText>
    <label>Leased Area</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>