PROD_10-24-19/force-app/main/default/objects/BLP_History__c/fields/Property_Name__c.field-meta.xml
<CustomField>
    <fullName>Property_Name__c</fullName>
    <description>The property in which the customer was a tenant</description>
    <inlineHelpText>The property in which the customer was a tenant</inlineHelpText>
    <label>Property Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>