PROD_10-24-19/force-app/main/default/objects/BLP_History__c/fields/Yardi_Lease_Code__c.field-meta.xml
<CustomField>
    <fullName>Yardi_Lease_Code__c</fullName>
    <description>This field will not be displayed. Just a placeholder for tie-back to Yardi lease record.</description>
    <inlineHelpText>This field will not be displayed. Just a placeholder for tie-back to Yardi lease record.</inlineHelpText>
    <label>Yardi Lease Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>